--- a/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
@@ -8,11 +8,11 @@
              x:Class="AppFVC.Views.RegisterPage"
              BackgroundColor="#6FCF97">
 
-   
-        <StackLayout VerticalOptions="Fill" Padding="0,0,0,10">
+    <ScrollView>  
+        <StackLayout VerticalOptions="Fill" Padding="0,0,0,30">
         
-            <Frame CornerRadius="5" VerticalOptions="Start"  x:Name="GridRegister" Margin="40,65,40,30">
-                <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" RowSpacing="5" Padding="1,0,1,10">
+            <Frame CornerRadius="5" VerticalOptions="Start"  x:Name="GridRegister" Margin="45,65,45,30">
+                <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" RowSpacing="5" Padding="1,0,1,0">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
@@ -45,7 +45,7 @@
                     BackgroundColor="Transparent"                
                    />
 
-                    <Label Grid.Row="0" Grid.ColumnSpan="2" Text="Cadastro" Style="{StaticResource BoldFont}" VerticalOptions="Start" FontSize="20" FontAttributes="Bold" TextColor="#303030" HorizontalOptions="Center"></Label>
+                    <Label Grid.Row="0" Grid.ColumnSpan="2" Text="Cadastro" Padding="0" Style="{StaticResource BoldFont}" VerticalOptions="Start" FontSize="20" FontAttributes="Bold" TextColor="#303030" HorizontalOptions="Center"></Label>
                     <Frame Grid.Row="1" Grid.ColumnSpan="2" Padding="0" Margin="0,10,0,0" BackgroundColor="#F2F2F2" CornerRadius="28">
                         <customRenders:CustomEntry Placeholder="Nome" Text="{Binding Nome}" MaxLength="100" Margin="10,0,0,0" HeightRequest="38" FontSize="14" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD">
                             <Entry.Behaviors>
@@ -91,7 +91,7 @@
                             </TapGestureRecognizer>
                         </Label.GestureRecognizers>
                     </Label>
-                    <CheckBox Grid.Row="8" Grid.Column="0" IsChecked="{Binding CheckTermo}" Color="#009789" Margin="5,5,0,0" VerticalOptions="EndAndExpand" HorizontalOptions="StartAndExpand" ></CheckBox>
+                    <CheckBox Grid.Row="8" Grid.Column="0" IsChecked="{Binding CheckTermo}" Color="#009789" Margin="5,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand" ></CheckBox>
                     <BoxView Grid.Row="8" Grid.Column="1" x:Name="boxTerms" WidthRequest="160" HeightRequest="25" HorizontalOptions="Start" VerticalOptions="Center">
                         <BoxView.GestureRecognizers>
                             <TapGestureRecognizer
@@ -113,19 +113,19 @@
                             </TapGestureRecognizer>
                         </Label.GestureRecognizers>
                     </Label>
-                    <CheckBox Grid.Row="9" Grid.Column="0" IsChecked="{Binding CheckPref}" Color="#009789" Margin="5,5,0,0" VerticalOptions="EndAndExpand" HorizontalOptions="StartAndExpand" ></CheckBox>
+                    <CheckBox Grid.Row="9" Grid.Column="0" IsChecked="{Binding CheckPref}" Color="#009789" Margin="5,0,0,0" VerticalOptions="StartAndExpand" HorizontalOptions="CenterAndExpand" ></CheckBox>
 
 
-                    <Label Grid.Row="9" Grid.Column="1" x:Name="lbPref" Margin="0,10,0,0" Text="Quero receber notificações da prefeitura" FontSize="12" TextColor="#A3A3A3" TextDecorations="Underline" VerticalOptions="StartAndExpand" ></Label>
-                    <Label Grid.Row="10" Grid.ColumnSpan="2" Margin="5,0,5,0" Text="{Binding Erro}" TextColor="#EB5757" IsVisible="{Binding IVErro}" FontSize="11"></Label>
-                    <Button Grid.Row="11" Grid.ColumnSpan="2" Margin="0,5,0,0" Command="{Binding NavegarNext}"   Style="{StaticResource ButtonNextStyle}" Text="Próximo" HeightRequest="40" FontSize="14" VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
+                    <Label Grid.Row="9" Grid.Column="1" x:Name="lbPref" Text="Desejo receber notificações da prefeitura." FontSize="12" TextColor="#A3A3A3" VerticalOptions="StartAndExpand" ></Label>
+                    <Label Grid.Row="10" Grid.ColumnSpan="2" Margin="10,0,10,5" Text="{Binding Erro}" HorizontalTextAlignment="Center" TextColor="#EB5757" IsVisible="{Binding IVErro}" FontSize="11"></Label>
+                    <Button Grid.Row="11" Grid.ColumnSpan="2" Command="{Binding NavegarNext}"   Style="{StaticResource ButtonNextStyle}" Text="Próximo" HeightRequest="40" FontSize="14" VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
                
                 </Grid>
                 
             </Frame>
             <Image Source="Group.png" VerticalOptions="EndAndExpand" HorizontalOptions="Center"></Image>
         </StackLayout>
-        
- 
+
+    </ScrollView>
 
 </ContentPage>
