--- a/appsrc/AppFVC/AppFVC/Views/RegisterInfoPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/RegisterInfoPage.xaml
@@ -7,7 +7,7 @@
              BackgroundColor="#6FCF97">
     <ScrollView>
         <StackLayout>
-            <Frame CornerRadius="5" VerticalOptions="Start" Margin="45,57,45,60" Padding="0">
+            <Frame CornerRadius="8" VerticalOptions="Start" Margin="45,57,45,60" Padding="0">
                 <StackLayout VerticalOptions="Start" Padding="0,0,10,30" BackgroundColor="White">
                     <ImageButton Source="iconExit50px.png" BackgroundColor="Transparent" Command="{Binding NavigationPop}" HeightRequest="30" HorizontalOptions="Start" Margin="0"></ImageButton>
                     <Label Text="Por que preciso informar  meus dados?" FontSize="20" VerticalOptions="Start" Padding="23,0,0,0" TextColor="#303030"></Label>
@@ -22,9 +22,10 @@
                             </FormattedString>
                         </Label.FormattedText>
                     </Label>
-                    <Image Source="Frame" HorizontalOptions="Center" Margin="0,20,0,0"></Image>
+                   
                 </StackLayout>
             </Frame>
+            <Image Source="Group.png"  Margin="0,0,0,30" HorizontalOptions="Center"></Image>
         </StackLayout>
     </ScrollView>
 </ContentPage>
