--- a/appsrc/AppFVC/AppFVC/Views/WelcomePage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/WelcomePage.xaml
@@ -9,8 +9,8 @@
     <ScrollView>
         
 
-            <Frame CornerRadius="8" VerticalOptions="StartAndExpand" HasShadow="True" Margin="45,50,45,30">
-            <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" RowSpacing="20" Padding="3,0,3,0">
+            <Frame CornerRadius="8" VerticalOptions="StartAndExpand" HasShadow="True" Margin="45,27,45,30">
+            <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Padding="1,0,1,5">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
@@ -27,19 +27,20 @@
                 </Grid.ColumnDefinitions>
 
                 <Image Grid.Row="0"  HorizontalOptions="Center" HeightRequest="42" Source="logo_cuidamaneh.png"/>
-                 <Label Grid.Row="1" TextColor="#737373" Text="Aqui em Floripa, a vida vem em primeiro lugar." FontSize="16"/>
-                <Label  Grid.Row="2" TextColor="#737373" FontSize="16" Text="Nesse APP, vamos monitorar sua localização para identificar se você pode ter sido infectado. Se você teve contato com alguém que testou positivo, não se preocupe, vamos te avisar! E aí é só seguir as recomendações do aplicativo."/>
-                <Label  Grid.Row="3" TextColor="#737373" FontSize="16" Text="Queremos proteger você e todos os que você ama."/>
-                <Label  Grid.Row="4" TextColor="#737373" FontSize="16" Text="Vem com a gente combater o Corona!" Style="{StaticResource BoldFont}"/>
-                <Button  Grid.Row="5" Margin="0,14,0,0" Padding="0" Style="{StaticResource ButtonNextStyle}" Command="{Binding NavegarNext}" Text="Próximo" WidthRequest="100" HeightRequest="40" FontSize="14" VerticalOptions="EndAndExpand" HorizontalOptions="CenterAndExpand"></Button>
+                <Label Grid.Row="1" TextColor="#4F4F4F" Margin="0,20,0,0" Text="Aqui em Floripa, a vida vem em primeiro lugar." FontSize="16"/>
+                <Label  Grid.Row="2" TextColor="#4F4F4F" Margin="0,20,0,0" FontSize="16" Text="Nesse APP, vamos monitorar sua localização para identificar se você pode ter sido infectado. Se você teve contato com alguém que testou positivo, não se preocupe, vamos te avisar! E aí é só seguir as recomendações do aplicativo."/>
+                <Label  Grid.Row="3" TextColor="#4F4F4F" Margin="0,20,0,0" FontSize="16" Text="Queremos proteger você e todos os que você ama."/>
+                <Label  Grid.Row="4" TextColor="#4F4F4F" Margin="0,20,0,15" FontSize="16" Text="Vem com a gente combater o Corona!" Style="{StaticResource BoldFont}"/>
                 <ActivityIndicator
                            IsVisible="{Binding IsBusy}"
                            IsRunning="{Binding IsBusy}"
                            Color="Red" 
-                    Grid.Row="6"
+                    Grid.Row="5"
                     HorizontalOptions="Center"
                     BackgroundColor="Transparent"                
                    />
+                <Button  Grid.Row="6" Padding="0" Style="{StaticResource ButtonNextStyle}" Command="{Binding NavegarNext}" Text="Próximo" WidthRequest="124" HeightRequest="45.53" FontSize="16" VerticalOptions="EndAndExpand" HorizontalOptions="CenterAndExpand"></Button>
+
                
             </Grid>
                 
