--- a/appsrc/AppFVC/AppFVC/Views/AddressPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/AddressPage.xaml
@@ -55,7 +55,7 @@
 
 
                     <Label Grid.Row="5" Grid.ColumnSpan="2" Margin="5,0,5,0" TextColor="#EB5757" FontSize="11"></Label>
-                    <Button Grid.Row="6" Grid.ColumnSpan="2" Style="{StaticResource ButtonNextStyle}" Command="{Binding NavegarNext}" Text="Próximo" HeightRequest="40" FontSize="14" VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
+                    <Button Grid.Row="6" Grid.ColumnSpan="2" Style="{StaticResource ButtonNextStyle}" Command="{Binding NavegarNext}" Text="Próximo" VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
                 </Grid>
             </Frame>
             <Image Source="Group.png" VerticalOptions="EndAndExpand" Margin="0,0,0,30" HorizontalOptions="Center"></Image>
