--- a/appsrc/AppFVC/AppFVC/Views/PreConditionsRiskGroupPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/PreConditionsRiskGroupPage.xaml
@@ -63,7 +63,7 @@
                     </Label>
                     <Label Grid.Row="2" Grid.ColumnSpan="2" Text="Quem faz parte do grupo de risco?" Style="{StaticResource BoldFont}" HorizontalTextAlignment="Center" FontSize="12" TextColor="#6FCF97" TextDecorations="Underline" VerticalOptions="StartAndExpand" />
 
-                    <Button Grid.Row="4" Grid.ColumnSpan="2" CornerRadius="25" TextColor="White" Text="Próximo" Command="{Binding NavegarNext}" HeightRequest="40" FontSize="14" BackgroundColor="#219653" VerticalOptions="EndAndExpand" HorizontalOptions="CenterAndExpand"></Button>
+                    <Button Grid.Row="4" Grid.ColumnSpan="2" Text="Próximo" Command="{Binding NavegarNext}" Style="{StaticResource ButtonNextStyle}" VerticalOptions="EndAndExpand" HorizontalOptions="CenterAndExpand"></Button>
                 </Grid>
             </Frame>
             <Image Source="Group.png" VerticalOptions="EndAndExpand" HorizontalOptions="Center"></Image>
