--- a/appsrc/AppFVC/AppFVC/App.xaml
+++ b/appsrc/AppFVC/AppFVC/App.xaml
@@ -23,8 +23,16 @@
                 <Setter Property="TextColor" Value="White"/>
                 <Setter Property="CornerRadius" Value="25"/>
                 <Setter Property="WidthRequest" Value="124"/>
-                <Setter Property="HeightRequest" Value="45.53"/>
+                <Setter Property="HeightRequest" Value="44"/>
                 <Setter Property="FontSize" Value="16"/>
+            </Style>
+
+            <Style x:Key="EntryStyle" TargetType="Entry">
+                <Setter Property="Margin" Value="10,0,0,0"/>
+                <Setter Property="HeightRequest" Value="44"/>
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="BackgroundColor" Value="#F2F2F2"/>
+                <Setter Property="PlaceholderColor" Value="#4F4F4F"/>
             </Style>
         </ResourceDictionary>
     </Application.Resources>
