--- a/appsrc/AppFVC/AppFVC/Views/AddressPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/AddressPage.xaml
@@ -7,7 +7,7 @@
              BackgroundColor="#6FCF97">
     <ScrollView>
         <StackLayout Padding="0,0,0,30">
-            <Frame CornerRadius="8" VerticalOptions="Start"  Margin="45,65,45,30">
+            <Frame CornerRadius="8" VerticalOptions="Start"  Margin="45,70,45,30.7">
                 <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" RowSpacing="5" Padding="1,0,1,10">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -29,27 +29,27 @@
 
                     <Label Grid.Row="0" Grid.ColumnSpan="2" Text="Onde você mora?" Style="{StaticResource BoldFont}"  VerticalOptions="Start" FontSize="20" FontAttributes="Bold" TextColor="#303030" HorizontalOptions="Center"></Label>
                     <Frame Grid.Row="1" Grid.ColumnSpan="2" Padding="0" Margin="0,10,0,0" BackgroundColor="#F2F2F2" CornerRadius="28">
-                        <customRenders:CustomEntry Placeholder="CEP" Margin="10,0,0,0" HeightRequest="38" FontSize="14" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD">
+                        <customRenders:CustomEntry Placeholder="CEP" Style="{StaticResource EntryStyle}">
                         </customRenders:CustomEntry>
                     </Frame>
 
                     <Frame Grid.Row="2" Grid.ColumnSpan="2" Padding="0" HorizontalOptions="FillAndExpand" BackgroundColor="#F2F2F2" CornerRadius="28">
-                        <customRenders:CustomEntry Placeholder="Endereço" MaxLength="15" Keyboard="Telephone" Margin="10,0,0,0" HeightRequest="38" FontSize="14" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD">
+                        <customRenders:CustomEntry Placeholder="Endereço" MaxLength="15" Keyboard="Telephone" Style="{StaticResource EntryStyle}">
                         </customRenders:CustomEntry>
                     </Frame>
 
                     <Frame Grid.Row="3" Grid.ColumnSpan="1" Padding="0" HorizontalOptions="Start" BackgroundColor="#F2F2F2" CornerRadius="28">
-                        <customRenders:CustomEntry Placeholder="Número" Keyboard="Numeric" MaxLength="3" Margin="10,0,10,0" HeightRequest="38" FontSize="14" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD">
+                        <customRenders:CustomEntry Placeholder="Número" WidthRequest="80" Keyboard="Numeric" MaxLength="3" Style="{StaticResource EntryStyle}">
                         </customRenders:CustomEntry>
                     </Frame>
 
                     <Frame Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="1" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28">
-                        <customRenders:CustomEntry Placeholder="Complemento" Keyboard="Numeric" MaxLength="3" Margin="10,0,10,0" HeightRequest="38" FontSize="14" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD">
+                        <customRenders:CustomEntry Placeholder="Complemento" Keyboard="Numeric" MaxLength="3" Style="{StaticResource EntryStyle}">
                         </customRenders:CustomEntry>
                     </Frame>
 
-                    <Frame Grid.Row="4" Grid.ColumnSpan="2" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28">
-                        <customRenders:CustomEntry Placeholder="Bairro" MaxLength="15" Keyboard="Telephone" Margin="10,0,0,0" HeightRequest="38" FontSize="14" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD">
+                    <Frame Grid.Row="4" Grid.ColumnSpan="2" Margin="0,0,0,70" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28">
+                        <customRenders:CustomEntry Placeholder="Bairro" MaxLength="15" Keyboard="Telephone" Style="{StaticResource EntryStyle}">
                         </customRenders:CustomEntry>
                     </Frame>
 
@@ -58,7 +58,7 @@
                     <Button Grid.Row="6" Grid.ColumnSpan="2" Style="{StaticResource ButtonNextStyle}" Command="{Binding NavegarNext}" Text="Próximo" VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
                 </Grid>
             </Frame>
-            <Image Source="Group.png" VerticalOptions="EndAndExpand" Margin="0,0,0,30" HorizontalOptions="Center"></Image>
+            <Image Source="Group.png" VerticalOptions="EndAndExpand" HorizontalOptions="Center"></Image>
         </StackLayout>
     </ScrollView>
 </ContentPage>
