--- a/appsrc/AppFVC/AppFVC/Views/PreConditionsPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/PreConditionsPage.xaml
@@ -13,7 +13,7 @@
             CornerRadius="8"
             HasShadow="True"             
             BackgroundColor="White" 
-            Margin="45,65,45,30">
+            Margin="45,70,45,30.7">
                 <Grid Padding="10,0,10,0" x:Name="gridComorb">
 
                     <Grid.RowDefinitions>
@@ -46,7 +46,7 @@
                     <Label 
                 Text="Você tem alguma comorbidade?" 
                         Style="{StaticResource BoldFont}"
-                        Margin="0,0,0,5"
+                        Margin="0,0,0,10"
                 TextColor="#303030" 
                 FontSize="20"
                 FontAttributes="Bold"
@@ -60,7 +60,7 @@
                     <CheckBox 
                     Grid.Column="0"
                     Grid.Row="1"
-                Color="#009789"
+                Color="#219653"
                         IsChecked="{Binding lbHipertensao}"
                 VerticalOptions="Center">
                     </CheckBox>
@@ -70,7 +70,7 @@
                         x:Name="lbHipertensao"
                         FontSize="16"
                 VerticalOptions="Center"
-                TextColor="Gray"
+                TextColor="#4F4F4F"
                 Text="Hipertensão">
                         <Label.GestureRecognizers>
                             <TapGestureRecognizer
@@ -84,7 +84,7 @@
                     
                     <CheckBox 
                     Grid.Column="0"
-                  Color="#009789"
+                  Color="#219653"
                     Grid.Row="2"
                          IsChecked="{Binding lbRespiratoria}"
                 VerticalOptions="Center">
@@ -93,7 +93,7 @@
                 Grid.Row="2"
                 Grid.Column="1"
                 VerticalOptions="Center"
-                TextColor="Gray"
+                TextColor="#4F4F4F"
                 FontSize="16"
                         x:Name="lbRespiratoria"
                 Text="Doença respiratória">
@@ -108,7 +108,7 @@
                     
                     
                     <CheckBox 
-                  Color="#009789"
+                  Color="#219653"
                     Grid.Column="0"
                     Grid.Row="3"
                          IsChecked="{Binding lbDiabetes}"
@@ -118,7 +118,7 @@
                 Grid.Row="3"
                 Grid.Column="1"
                 VerticalOptions="Center"
-                TextColor="Gray"
+                TextColor="#4F4F4F"
                 FontSize="16"
                          x:Name="lbDiabetes"
                 Text="Diabetes">
@@ -134,7 +134,7 @@
                     
                     <CheckBox 
                     Grid.Column="0"
-                  Color="#009789"
+                  Color="#219653"
                     Grid.Row="4"
                          IsChecked="{Binding LbImunodef}"
                 VerticalOptions="Center">
@@ -143,7 +143,7 @@
                 Grid.Row="4"
                 Grid.Column="1"
                 VerticalOptions="Center"
-                TextColor="Gray"
+                TextColor="#4F4F4F"
                 FontSize="16"
                          x:Name="LbImunodef"
                 Text="Imunodeficiência">
@@ -159,7 +159,7 @@
                     
                     <CheckBox 
                     Grid.Column="0"
-                  Color="#009789"
+                  Color="#219653"
                     Grid.Row="5"
                          IsChecked="{Binding lbCardio}"
                 VerticalOptions="Center">
@@ -168,7 +168,7 @@
                 Grid.Row="5"
                 Grid.Column="1"
                 VerticalOptions="Center"
-                TextColor="Gray"
+                TextColor="#4F4F4F"
                 FontSize="16"
                           x:Name="lbCardio"
                 Text="Doença cardiovascular">
@@ -184,7 +184,7 @@
                     
                     <CheckBox 
                     Grid.Column="0"
-                  Color="#009789"
+                  Color="#219653"
                     Grid.Row="6"
                          IsChecked="{Binding lbRenal}"
                 VerticalOptions="Center">
@@ -194,7 +194,7 @@
                 Grid.Column="1"
                    x:Name="lbRenal"
                 VerticalOptions="Center"
-                TextColor="Gray"
+                TextColor="#4F4F4F"
                 FontSize="16"
                 Text="Insuficiência Renal">
                         <Label.GestureRecognizers>
@@ -209,7 +209,7 @@
 
                     
                     <Button
-                Margin="0,5,0,0"
+                Margin="0,40,0,0"
                 Grid.Row="7"
                 Grid.Column="0"
                 Grid.ColumnSpan="3"
