--- a/appsrc/AppFVC/AppFVC/Views/PreConditionsRiskGroupPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/PreConditionsRiskGroupPage.xaml
@@ -10,8 +10,8 @@
 
     <ScrollView>
         <StackLayout Padding="0,0,0,30">
-            <Frame CornerRadius="8" VerticalOptions="Start" x:Name="FrameRiskGroup" Margin="45,65,45,30">
-                <Grid VerticalOptions="Start" HorizontalOptions="FillAndExpand" RowSpacing="20" x:Name="GridSms" Padding="1,0,1,20">
+            <Frame CornerRadius="8" VerticalOptions="Start" x:Name="FrameRiskGroup" Margin="45,70,45,30.7">
+                <Grid VerticalOptions="Start" HorizontalOptions="FillAndExpand" RowSpacing="20" x:Name="GridSms" Padding="1,0,1,5">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
@@ -61,7 +61,7 @@
                             </TapGestureRecognizer>
                         </Label.GestureRecognizers>
                     </Label>
-                    <Label Grid.Row="2" Grid.ColumnSpan="2" Text="Quem faz parte do grupo de risco?" Style="{StaticResource BoldFont}" HorizontalTextAlignment="Center" FontSize="12" TextColor="#6FCF97" TextDecorations="Underline" VerticalOptions="StartAndExpand" />
+                    <Label Grid.Row="2" Grid.ColumnSpan="2" Text="Quem faz parte do grupo de risco?" Style="{StaticResource BoldFont}" HorizontalTextAlignment="Center" FontSize="12" TextColor="#219653" TextDecorations="Underline" VerticalOptions="StartAndExpand" />
 
                     <Button Grid.Row="4" Grid.ColumnSpan="2" Text="Próximo" Command="{Binding NavegarNext}" Style="{StaticResource ButtonNextStyle}" VerticalOptions="EndAndExpand" HorizontalOptions="CenterAndExpand"></Button>
                 </Grid>
