--- a/appsrc/AppFVC/AppFVC/Views/AddressPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/AddressPage.xaml
@@ -38,6 +38,9 @@
 
                     <Frame Grid.Row="2" Grid.ColumnSpan="2" Padding="0" HorizontalOptions="FillAndExpand" BackgroundColor="#F2F2F2" CornerRadius="28">
                         <customRenders:CustomEntry Placeholder="Endereço" MaxLength="100" Style="{StaticResource EntryStyle}" >
+                            <Entry.Behaviors>
+                                <local:EnderecoBehavior />
+                            </Entry.Behaviors>
                         </customRenders:CustomEntry>
                     </Frame>
 
@@ -53,6 +56,9 @@
 
                     <Frame Grid.Row="4" Grid.ColumnSpan="2" Margin="0,0,0,70" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28">
                         <customRenders:CustomEntry Placeholder="Bairro" MaxLength="20" Style="{StaticResource EntryStyle}">
+                            <Entry.Behaviors>
+                                <local:NomeBehavior />
+                            </Entry.Behaviors>
                         </customRenders:CustomEntry>
                     </Frame>
 
