--- a/appsrc/AppFVC/AppFVC/Views/RegisterInfoPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/RegisterInfoPage.xaml
@@ -9,7 +9,7 @@
         <StackLayout Margin="0,0,0,27.7" >
             <Frame CornerRadius="8" VerticalOptions="Start" Margin="45,32,45,0" Padding="0">
                 <StackLayout VerticalOptions="Start" Padding="0,0,10,30" BackgroundColor="White">
-                    <ImageButton Source="iconExit50px.png" BackgroundColor="Transparent" Command="{Binding NavigationPop}" HeightRequest="30" HorizontalOptions="Start" Margin="0"></ImageButton>
+                    <ImageButton Source="x_50.png" Margin="10,10,0,0" BackgroundColor="Transparent" Command="{Binding NavigationPop}" HeightRequest="15" HorizontalOptions="Start" ></ImageButton>
                     <Label Text="Por que preciso informar  meus dados?" FontSize="20" VerticalOptions="Start" Padding="23,0,0,0" TextColor="#303030"></Label>
                     <Label Padding="23,0,30,0" TextColor="#737373" FontSize="16" Text="Precisamos de algumas informações básicas para informar como você deve proceder, no caso de contaminação. "></Label>
                     <Label Padding="23,10,30,0" TextColor="#737373" FontSize="16" Text="Também é necessário que você permita acesso à sua localização, para podermos monitorar se você entrou em contato com alguém infectado."></Label>
