--- a/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
@@ -47,7 +47,7 @@
 
                     <Label Grid.Row="0" Grid.ColumnSpan="2" Text="Cadastro" Padding="0" Style="{StaticResource BoldFont}" VerticalOptions="Start" FontSize="20" FontAttributes="Bold" TextColor="#303030" HorizontalOptions="Center"></Label>
                     <Frame Grid.Row="1" Grid.ColumnSpan="2" Padding="0" Margin="0,10,0,0" BackgroundColor="#F2F2F2" CornerRadius="28">
-                        <customRenders:CustomEntry Placeholder="Nome" Text="{Binding Nome}" MaxLength="100" Style="{StaticResource EntryStyle}">
+                        <customRenders:CustomEntry Placeholder="Nome" Text="{Binding Nome}" TextColor="{Binding TxtColorNome}" MaxLength="100" Style="{StaticResource EntryStyle}">
                             <Entry.Behaviors>
                                 <local:NomeBehavior />
                             </Entry.Behaviors>
@@ -55,7 +55,7 @@
                     </Frame>
                     <Label Grid.Row="2" Grid.ColumnSpan="2" Margin="10,0,0,0" Text="{Binding ErroNome}" TextColor="#EB5757" IsVisible="{Binding IVNome}" FontSize="11"></Label>
                     <Frame Grid.Row="3" Grid.ColumnSpan="2" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28">
-                        <customRenders:CustomEntry Placeholder="Número de celular" Text="{Binding NumeroTelefone}" MaxLength="15" Keyboard="Telephone" Style="{StaticResource EntryStyle}">
+                        <customRenders:CustomEntry Placeholder="Número de celular" Text="{Binding NumeroTelefone}" TextColor="{Binding TxtColorPhone}" MaxLength="15" Keyboard="Telephone" Style="{StaticResource EntryStyle}">
                             <Entry.Behaviors>
                                 <local:PhoneNumberFormatterBehavior />
                             </Entry.Behaviors>
@@ -64,7 +64,7 @@
                     <Label Grid.Row="4" Grid.ColumnSpan="2" Margin="10,0,0,0" Text="{Binding ErroNumero}" TextColor="#EB5757" IsVisible="{Binding IVNumero}" FontSize="11"></Label>
 
                     <Frame Grid.Row="5" Grid.ColumnSpan="2" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28">
-                        <customRenders:CustomEntry Placeholder="Idade" Text="{Binding Idade}" Keyboard="Numeric" MaxLength="3" Style="{StaticResource EntryStyle}">
+                        <customRenders:CustomEntry Placeholder="Idade" Text="{Binding Idade}" TextColor="{Binding TxtColorIdade}" Keyboard="Numeric" MaxLength="3" Style="{StaticResource EntryStyle}">
                             <Entry.Behaviors>
                                 <local:IdadeBehavior />
                             </Entry.Behaviors>
